update js proto, add AjaxRequest module and fix header z-index

--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -5,6 +5,7 @@ header
 	width: 100%;
 	background-color: $bgColor-nav;
 	transition: opacity 0.2s;
+	z-index: 1;
 	h1
 	{
 		padding: $distance-generic01 0;
