--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,7 +112,8 @@ header {
   position: fixed;
   width: 100%;
   background-color: #2a3036;
-  transition: opacity 0.2s; }
+  transition: opacity 0.2s;
+  z-index: 1; }
   header h1 {
     padding: 0.5rem 0;
     color: #dbdde1; }
